--- a/app/src/main/res/layout/activity_free_mode.xml
+++ b/app/src/main/res/layout/activity_free_mode.xml
@@ -260,7 +260,9 @@
             android:layout_width="45dp"
             android:layout_height="45dp"
             android:layout_weight="1"
-            android:background="@drawable/green_tile" />
+            android:background="@drawable/green_tile"
+            android:scaleType="centerCrop"
+            android:onClick="show_moves"/>
         <ImageButton
             android:id="@+id/button55"
             android:layout_width="45dp"
