App design patch (dark). Game initialisation.

--- a/app/src/main/res/layout/activity_opening_details.xml
+++ b/app/src/main/res/layout/activity_opening_details.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="#333333"
     tools:context=".OpeningDetails">
 
     <Space
@@ -16,6 +17,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView"
+        android:textColor="@color/white"
         android:textSize="18sp"/>
 
 
