--- a/app/src/main/res/layout/activity_choose_timer.xml
+++ b/app/src/main/res/layout/activity_choose_timer.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="#FFFFFF"
+    android:background="#333333"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ChooseTimer">
@@ -13,6 +13,8 @@
         android:layout_height="70dp"
         android:layout_marginTop="68dp"
         android:text="Bullet"
+        android:textSize="18sp"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.535"
         app:layout_constraintStart_toStartOf="parent"
@@ -96,6 +98,8 @@
         android:layout_height="70dp"
         android:layout_marginTop="484dp"
         android:text="Rapid"
+        android:textSize="18sp"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.633"
         app:layout_constraintStart_toStartOf="parent"
@@ -107,6 +111,8 @@
         android:layout_height="70dp"
         android:layout_marginTop="272dp"
         android:text="Blitz"
+        android:textSize="18sp"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.669"
         app:layout_constraintStart_toStartOf="parent"
