--- a/app/src/main/res/layout/activity_timer_game.xml
+++ b/app/src/main/res/layout/activity_timer_game.xml
@@ -9,13 +9,13 @@
 
 
     <TextView
-        android:id="@+id/textViewAbove"
+        android:id="@+id/timer2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:rotationX="180"
         android:rotationY="180"
-        android:text="Player 2"
+        android:text=""
         android:textColor="@color/white"
         android:textSize="18sp" />
 
@@ -487,10 +487,10 @@
         android:layout_height="50dp" />
 
     <TextView
-    android:id="@+id/textViewBelow"
+    android:id="@+id/timer1"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:text="Player 1"
+    android:text=""
     android:textSize="18sp" android:textColor="@color/white"
     android:layout_gravity="center" />
 
