--- a/app/src/main/res/layout/activity_timer_game.xml
+++ b/app/src/main/res/layout/activity_timer_game.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#333333"
@@ -521,5 +522,19 @@
         android:rotation="180"
         android:text="Resign"
         android:onClick="resign" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="20dp">
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/floatingActionButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:onClick="restartGame"
+        app:srcCompat="@android:drawable/ic_menu_rotate" />
 
 </LinearLayout>
