--- a/app/src/main/res/layout/activity_timer_game.xml
+++ b/app/src/main/res/layout/activity_timer_game.xml
@@ -534,7 +534,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:clickable="true"
+        android:layout_gravity="center"
         android:onClick="restartGame"
+        android:scaleType="center"
         app:srcCompat="@android:drawable/ic_menu_rotate" />
 
 </LinearLayout>
