--- a/app/src/main/res/layout/activity_choose_timer.xml
+++ b/app/src/main/res/layout/activity_choose_timer.xml
@@ -27,6 +27,7 @@
         android:layout_marginTop="300dp"
         android:onClick="timer_start"
         android:text="3 min"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.206"
         app:layout_constraintStart_toStartOf="parent"
@@ -39,6 +40,7 @@
         android:layout_marginTop="472dp"
         android:onClick="timer_start"
         android:text="10 min + 1s"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.832"
         app:layout_constraintStart_toStartOf="parent"
@@ -51,6 +53,7 @@
         android:layout_marginTop="612dp"
         android:onClick="no_timer_start"
         android:text="No timer"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
@@ -63,6 +66,7 @@
         android:layout_marginTop="300dp"
         android:onClick="timer_start"
         android:text="3 min + 1s"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.832"
         app:layout_constraintStart_toStartOf="parent"
@@ -75,6 +79,7 @@
         android:layout_marginTop="472dp"
         android:onClick="timer_start"
         android:text="10 min"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.206"
         app:layout_constraintStart_toStartOf="parent"
@@ -86,6 +91,7 @@
         android:layout_height="70dp"
         android:layout_marginTop="132dp"
         android:text="1 min + 1s"
+        android:textColor="@color/white"
         android:onClick="timer_start"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.832"
@@ -125,6 +131,7 @@
         android:layout_marginTop="124dp"
         android:onClick="timer_start"
         android:text="1 min"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.206"
         app:layout_constraintStart_toStartOf="parent"
