--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,7 @@
         android:layout_height="69dp"
         android:layout_marginTop="188dp"
         android:text="Play"
+        android:textColor="@color/white"
         android:onClick="switch_to_play_view"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -25,6 +26,7 @@
         android:layout_height="69dp"
         android:layout_marginTop="92dp"
         android:text="Openings"
+        android:textColor="@color/white"
         android:onClick="switch_to_opening_view"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -37,6 +39,7 @@
         android:layout_height="69dp"
         android:layout_marginTop="92dp"
         android:text="Free Mode"
+        android:textColor="@color/white"
         android:onClick="switch_to_free_mode_view"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
