--- a/app/src/main/res/layout/activity_timer_game.xml
+++ b/app/src/main/res/layout/activity_timer_game.xml
@@ -15,6 +15,7 @@
         android:layout_height="wrap_content"
         android:rotation="180"
         android:text="Resign"
+        android:textColor="@color/white"
         android:onClick="resign" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -56,7 +57,7 @@
             android:layout_width="45dp"
             android:layout_height="45dp"
             android:layout_weight="1"
-            android:background="@drawable/green_tile"
+            android:background="@drawable/blue_tile"
             android:scaleType="centerCrop"/>
         <ImageButton
             android:id="@+id/button72"
@@ -70,7 +71,7 @@
             android:layout_width="45dp"
             android:layout_height="45dp"
             android:layout_weight="1"
-            android:background="@drawable/green_tile"
+            android:background="@drawable/blue_tile"
             android:scaleType="centerCrop"/>
         <ImageButton
             android:id="@+id/button74"
@@ -84,7 +85,7 @@
             android:layout_width="45dp"
             android:layout_height="45dp"
             android:layout_weight="1"
-            android:background="@drawable/green_tile"
+            android:background="@drawable/blue_tile"
             android:scaleType="centerCrop"/>
         <ImageButton
             android:id="@+id/button76"
@@ -98,14 +99,14 @@
             android:layout_width="45dp"
             android:layout_height="45dp"
             android:layout_weight="1"
-            android:background="@drawable/green_tile"
+            android:background="@drawable/blue_tile"
             android:scaleType="centerCrop"/>
         <ImageButton
             android:id="@+id/button60"
             android:layout_width="45dp"
             android:layout_height="45dp"
             android:layout_weight="1"
-            android:background="@drawable/green_tile"
+            android:background="@drawable/blue_tile"
             android:scaleType="centerCrop"/>
         <ImageButton
             android:id="@+id/button61"
@@ -119,7 +120,7 @@
             android:layout_width="45dp"
             android:layout_height="45dp"
             android:layout_weight="1"
-            android:background="@drawable/green_tile"
+            android:background="@drawable/blue_tile"
             android:scaleType="centerCrop"/>
         <ImageButton
             android:id="@+id/button63"
@@ -133,7 +134,7 @@
             android:layout_width="45dp"
             android:layout_height="45dp"
             android:layout_weight="1"
-            android:background="@drawable/green_tile"
+            android:background="@drawable/blue_tile"
             android:scaleType="centerCrop"/>
         <ImageButton
             android:id="@+id/button65"
@@ -147,7 +148,7 @@
             android:layout_width="45dp"
             android:layout_height="45dp"
             android:layout_weight="1"
-            android:background="@drawable/green_tile"
+            android:background="@drawable/blue_tile"
             android:scaleType="centerCrop"/>
         <ImageButton
             android:id="@+id/button67"
@@ -168,7 +169,7 @@
             android:layout_width="45dp"
             android:layout_height="45dp"
             android:layout_weight="1"
-            android:background="@drawable/green_tile"
+            android:background="@drawable/blue_tile"
             android:scaleType="centerCrop"/>
         <ImageButton
             android:id="@+id/button52"
@@ -182,7 +183,7 @@
             android:layout_width="45dp"
             android:layout_height="45dp"
             android:layout_weight="1"
-            android:background="@drawable/green_tile"
+            android:background="@drawable/blue_tile"
             android:scaleType="centerCrop"/>
         <ImageButton
             android:id="@+id/button54"
@@ -196,7 +197,7 @@
             android:layout_width="45dp"
             android:layout_height="45dp"
             android:layout_weight="1"
-            android:background="@drawable/green_tile"
+            android:background="@drawable/blue_tile"
             android:scaleType="centerCrop"/>
         <ImageButton
             android:id="@+id/button56"
@@ -210,14 +211,14 @@
             android:layout_width="45dp"
             android:layout_height="45dp"
             android:layout_weight="1"
-            android:background="@drawable/green_tile"
+            android:background="@drawable/blue_tile"
             android:scaleType="centerCrop"/>
         <ImageButton
             android:id="@+id/button40"
             android:layout_width="45dp"
             android:layout_height="45dp"
             android:layout_weight="1"
-            android:background="@drawable/green_tile"
+            android:background="@drawable/blue_tile"
             android:scaleType="centerCrop"/>
         <ImageButton
             android:id="@+id/button41"
@@ -231,7 +232,7 @@
             android:layout_width="45dp"
             android:layout_height="45dp"
             android:layout_weight="1"
-            android:background="@drawable/green_tile"
+            android:background="@drawable/blue_tile"
             android:scaleType="centerCrop"/>
         <ImageButton
             android:id="@+id/button43"
@@ -245,7 +246,7 @@
             android:layout_width="45dp"
             android:layout_height="45dp"
             android:layout_weight="1"
-            android:background="@drawable/green_tile"
+            android:background="@drawable/blue_tile"
             android:scaleType="centerCrop"/>
         <ImageButton
             android:id="@+id/button45"
@@ -259,7 +260,7 @@
             android:layout_width="45dp"
             android:layout_height="45dp"
             android:layout_weight="1"
-            android:background="@drawable/green_tile"
+            android:background="@drawable/blue_tile"
             android:scaleType="centerCrop"/>
         <ImageButton
             android:id="@+id/button47"
@@ -280,7 +281,7 @@
             android:layout_width="45dp"
             android:layout_height="45dp"
             android:layout_weight="1"
-            android:background="@drawable/green_tile"
+            android:background="@drawable/blue_tile"
             android:scaleType="centerCrop"/>
         <ImageButton
             android:id="@+id/button32"
@@ -294,7 +295,7 @@
             android:layout_width="45dp"
             android:layout_height="45dp"
             android:layout_weight="1"
-            android:background="@drawable/green_tile"
+            android:background="@drawable/blue_tile"
             android:scaleType="centerCrop"/>
         <ImageButton
             android:id="@+id/button34"
@@ -308,7 +309,7 @@
             android:layout_width="45dp"
             android:layout_height="45dp"
             android:layout_weight="1"
-            android:background="@drawable/green_tile"
+            android:background="@drawable/blue_tile"
             android:scaleType="centerCrop"/>
         <ImageButton
             android:id="@+id/button36"
@@ -322,14 +323,14 @@
             android:layout_width="45dp"
             android:layout_height="45dp"
             android:layout_weight="1"
-            android:background="@drawable/green_tile"
+            android:background="@drawable/blue_tile"
             android:scaleType="centerCrop"/>
         <ImageButton
             android:id="@+id/button20"
             android:layout_width="45dp"
             android:layout_height="45dp"
             android:layout_weight="1"
-            android:background="@drawable/green_tile"
+            android:background="@drawable/blue_tile"
             android:scaleType="centerCrop"/>
         <ImageButton
             android:id="@+id/button21"
@@ -343,7 +344,7 @@
             android:layout_width="45dp"
             android:layout_height="45dp"
             android:layout_weight="1"
-            android:background="@drawable/green_tile"
+            android:background="@drawable/blue_tile"
             android:scaleType="centerCrop"/>
         <ImageButton
             android:id="@+id/button23"
@@ -357,7 +358,7 @@
             android:layout_width="45dp"
             android:layout_height="45dp"
             android:layout_weight="1"
-            android:background="@drawable/green_tile"
+            android:background="@drawable/blue_tile"
             android:scaleType="centerCrop"/>
         <ImageButton
             android:id="@+id/button25"
@@ -371,7 +372,7 @@
             android:layout_width="45dp"
             android:layout_height="45dp"
             android:layout_weight="1"
-            android:background="@drawable/green_tile"
+            android:background="@drawable/blue_tile"
             android:scaleType="centerCrop"/>
         <ImageButton
             android:id="@+id/button27"
@@ -392,7 +393,7 @@
             android:layout_width="45dp"
             android:layout_height="45dp"
             android:layout_weight="1"
-            android:background="@drawable/green_tile"
+            android:background="@drawable/blue_tile"
             android:scaleType="centerCrop"/>
         <ImageButton
             android:id="@+id/button12"
@@ -406,7 +407,7 @@
             android:layout_width="45dp"
             android:layout_height="45dp"
             android:layout_weight="1"
-            android:background="@drawable/green_tile"
+            android:background="@drawable/blue_tile"
             android:scaleType="centerCrop"/>
         <ImageButton
             android:id="@+id/button14"
@@ -420,7 +421,7 @@
             android:layout_width="45dp"
             android:layout_height="45dp"
             android:layout_weight="1"
-            android:background="@drawable/green_tile"
+            android:background="@drawable/blue_tile"
             android:scaleType="centerCrop"/>
         <ImageButton
             android:id="@+id/button16"
@@ -434,14 +435,14 @@
             android:layout_width="45dp"
             android:layout_height="45dp"
             android:layout_weight="1"
-            android:background="@drawable/green_tile"
+            android:background="@drawable/blue_tile"
             android:scaleType="centerCrop"/>
         <ImageButton
             android:id="@+id/button00"
             android:layout_width="45dp"
             android:layout_height="45dp"
             android:layout_weight="1"
-            android:background="@drawable/green_tile"
+            android:background="@drawable/blue_tile"
             android:scaleType="centerCrop"/>
         <ImageButton
             android:id="@+id/button01"
@@ -455,7 +456,7 @@
             android:layout_width="45dp"
             android:layout_height="45dp"
             android:layout_weight="1"
-            android:background="@drawable/green_tile"
+            android:background="@drawable/blue_tile"
             android:scaleType="centerCrop"/>
         <ImageButton
             android:id="@+id/button03"
@@ -469,7 +470,7 @@
             android:layout_width="45dp"
             android:layout_height="45dp"
             android:layout_weight="1"
-            android:background="@drawable/green_tile"
+            android:background="@drawable/blue_tile"
             android:scaleType="centerCrop"/>
         <ImageButton
             android:id="@+id/button05"
@@ -483,7 +484,7 @@
             android:layout_width="45dp"
             android:layout_height="45dp"
             android:layout_weight="1"
-            android:background="@drawable/green_tile"
+            android:background="@drawable/blue_tile"
             android:scaleType="centerCrop"/>
         <ImageButton
             android:id="@+id/button07"
@@ -522,6 +523,7 @@
         android:layout_height="wrap_content"
         android:rotation="180"
         android:text="Resign"
+        android:textColor="@color/white"
         android:onClick="resign" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
