--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,7 +2,7 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.Chess" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
-        <item name="colorPrimary">@color/Green</item>
+        <item name="colorPrimary">@color/Blue</item>
     </style>
 
     <style name="Theme.Chess" parent="Base.Theme.Chess" />
