About us added / reporting

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,10 +11,10 @@
         android:id="@+id/play"
         android:layout_width="192dp"
         android:layout_height="69dp"
-        android:layout_marginTop="188dp"
+        android:layout_marginTop="100dp"
+        android:onClick="switch_to_play_view"
         android:text="Play"
         android:textColor="@color/white"
-        android:onClick="switch_to_play_view"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
@@ -41,6 +41,19 @@
         android:text="Free Mode"
         android:textColor="@color/white"
         android:onClick="switch_to_free_mode_view"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/openings" />
+
+    <Button
+        android:id="@+id/about"
+        android:layout_width="192dp"
+        android:layout_height="69dp"
+        android:layout_marginTop="252dp"
+        android:onClick="switch_to_about_view"
+        android:text="About"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
